Add configs for BTT SKR Pico mainboard

--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -12,15 +12,20 @@ gcode:
     M104 S{EXTRUDER_TEMP}
     G90
     G28
+    STATUS_MESHING
     BED_MESH_CALIBRATE
-    BED_MESH_PROFILE SAVE=KAMP
-    BED_MESH_PROFILE LOAD=KAMP
+    # BED_MESH_PROFILE SAVE=KAMP
+    # BED_MESH_PROFILE LOAD=KAMP
+    STATUS_HEATING
     M190 S{BED_TEMP}
     M109 S{EXTRUDER_TEMP}
+    STATUS_BUSY
     LINE_PURGE
+    STATUS_PRINTING
 
 [gcode_macro END_PRINT]
 gcode:
+    STATUS_COMPLETE
     # Turn off bed, extruder, and fan
     M140 S0
     M104 S0
@@ -29,6 +34,7 @@ gcode:
     # G1 E-1
     PRESENT_BED
     M117
+    UPDATE_DELAYED_GCODE ID=status_ready DURATION=30
 
 ################################################################################
 # HOME
@@ -73,6 +79,7 @@ gcode:
     G91
     G1 E-60 F1000
     RESTORE_GCODE_STATE NAME=M600_state
+    STATUS_COMPLETE
 
 ######################################################################
 # Input Shaper Calibration
@@ -93,10 +100,12 @@ gcode:
 rename_existing: G28.2
 gcode:
     {% if printer.toolhead.homed_axes != "xyz" %}
+        STATUS_HOMING
         G28.2
+        STATUS_READY
     {% endif %}
 
-#[gcode_macro _CLIENT_VARIABLE]
+[gcode_macro _CLIENT_VARIABLE]
 variable_use_custom_pos   : True ; use custom park coordinates for x,y [True/False]
 variable_custom_park_x    : 225.0   ; custom x position; value must be within your defined min and max of X
 variable_custom_park_y    : 225.0   ; custom y position; value must be within your defined min and max of Y
@@ -113,3 +122,4 @@ variable_park_at_cancel_x : None  ; different park position during CANCEL_PRINT 
 variable_park_at_cancel_y : None  ; different park position during CANCEL_PRINT [None/Position as Float]; park_at_cancel must be True
 # !!! Caution [firmware_retraction] must be defined in the printer.cfg if you set use_fw_retract: True !!!
 variable_use_fw_retract  : False ; use fw_retraction instead of the manual version [True/False]
+gcode:
