--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -4,6 +4,7 @@
 [include KlackEnder.cfg]
 [include Adaptive_Mesh.cfg]
 [include Line_Purge.cfg]
+[include stealthburner_leds.cfg]
 # [include ADXL.cfg]
 
 [exclude_object]
@@ -15,123 +16,123 @@ on_error_gcode: CANCEL_PRINT
 [idle_timeout]
 timeout: 18000
 
-[mcu]
-serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
-restart_method: command
-
 ################################################################################
 # Printer
 ################################################################################
+[mcu]
+serial: /dev/serial/by-id/usb-Klipper_rp2040_455035712895C148-if00
+restart_method: command
+
 [printer]
 kinematics: cartesian
-max_velocity: 300
-max_accel: 4200
+max_velocity: 500
+max_accel: 3700
 max_z_velocity: 150
-max_z_accel: 500
+max_z_accel: 300
 
 ################################################################################
 # Stepper Configs
 ################################################################################
 [stepper_x]
-step_pin: PC2
-dir_pin: PB9
-enable_pin: !PC3
+step_pin: gpio11
+dir_pin: !gpio10
+enable_pin: !gpio12
 microsteps: 16
 rotation_distance: 40
-endstop_pin: ^PA5
+endstop_pin: ^gpio4
 position_endstop: 0
 position_max: 246
-homing_speed: 100
+homing_speed: 200
+second_homing_speed: 100
+
+[tmc2209 stepper_x]
+uart_pin: gpio9
+tx_pin: gpio8
+uart_address: 0
+run_current: 0.8
+hold_current: 0.6
+stealthchop_threshold: 999999
+# diag_pin: ^gpio4
+# driver_SGTHRS: 100
 
 [stepper_y]
-step_pin: PB8
-dir_pin: PB7
-enable_pin: !PC3
+step_pin: gpio6
+dir_pin: !gpio5
+enable_pin: !gpio7
 microsteps: 16
 rotation_distance: 40
-endstop_pin: ^PA6
-position_endstop: -8
+endstop_pin: ^gpio3
+position_endstop: 0
 position_max: 235
 position_min: -8
-homing_speed: 100
+homing_speed: 200
+second_homing_speed: 100
+
+[tmc2209 stepper_y]
+uart_pin: gpio9
+tx_pin: gpio8
+uart_address: 2
+run_current: 0.8
+hold_current: 0.6
+stealthchop_threshold: 999999
+diag_pin: ^gpio3
+driver_SGTHRS: 100
 
 [stepper_z]
-step_pin: PB6
-dir_pin: !PB5
-enable_pin: !PC3
+step_pin: gpio19
+dir_pin: gpio28
+enable_pin: !gpio2
 microsteps: 16
 rotation_distance: 8
-# endstop_pin: ^PA7
-endstop_pin:probe:z_virtual_endstop
-# position_endstop: 0.0
+endstop_pin: probe:z_virtual_endstop
 position_max: 250
 position_min: -8
 homing_speed: 20
 second_homing_speed: 5
 
+[tmc2209 stepper_z]
+uart_pin: gpio9
+tx_pin: gpio8
+uart_address: 1
+run_current: 0.580
+hold_current: 0.500
+# stealthchop_threshold: 999999
+
 ################################################################################
 # Extruder Config
 ################################################################################
 [extruder]
-max_extrude_only_distance: 100.0
-step_pin: PB4
-dir_pin: PB3
-enable_pin: !PC3
+step_pin: gpio14
+dir_pin: !gpio13
+enable_pin: !gpio15
 microsteps: 16
-rotation_distance: 22.991
-# rotation_distance: 13.33478
-# gear_ratio: 50:17
 gear_ratio:50:10
-nozzle_diameter: 0.400
-filament_diameter: 1.750
-heater_pin: PA1
+rotation_distance: 22.991
+nozzle_diameter: 0.4
+filament_diameter: 1.75
+pressure_advance = 0.04
+heater_pin: gpio23
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: PC5
-max_extrude_cross_section:2
-#   Maximum area (in mm^2) of an extrusion cross section (eg,
-#   extrusion width multiplied by layer height). This setting prevents
-#   excessive amounts of extrusion during relatively small XY moves.
-#   If a move requests an extrusion rate that would exceed this value
-#   it will cause an error to be returned. The default is: 4.0 *
-#   nozzle_diameter^2
-pressure_advance = 0.07
-#control: pid
-# tuned for stock hardware with 200 degree Celsius target
-#pid_Kp: 21.527
-#pid_Ki: 1.063
-#pid_Kd: 108.982
+sensor_pin: gpio27
 min_temp: 0
-max_temp: 275
+max_temp: 300
 min_extrude_temp: 175
-#hysteresis: 10
+max_extrude_cross_section:2
+max_extrude_only_distance: 100.0
 
-################################################################################
-# Bed Heater Config
-################################################################################
-[heater_bed]
-heater_pin: PA2
-sensor_type: EPCOS 100K B57560G104F
-sensor_pin: PC4
-#control: pid
-# tuned for stock hardware with 50 degree Celsius target
-#pid_Kp: 54.027
-#pid_Ki: 0.770
-#pid_Kd: 948.182
-min_temp: 0
-max_temp: 130
-
-################################################################################
-# Cooling Fan
-################################################################################
-[fan]
-pin: PA0
+[tmc2209 extruder]
+uart_pin: gpio9
+tx_pin: gpio8
+uart_address: 3
+run_current: 0.350
+hold_current: 0.200
+stealthchop_threshold: 999999
 
 ################################################################################
 # Probe
 ################################################################################
 [probe]
-pin: ^PA7 # Creality 4.2.2 Z-stop pin
-#z_offset: -5.5 #Measure per your specific setup
+pin: ^gpio25
 x_offset: 5 # negative = left of the nozzle
 y_offset: 41 # negative = in front of of the nozzle
 speed: 10.0
@@ -140,29 +141,28 @@ sample_retract_dist: 1
 samples: 2
 samples_tolerance_retries: 6
 
-[bed_mesh]
-speed: 120
-horizontal_move_z: 10
-mesh_min: 5, 33         #!!min and max co-ords are based on the probes location not the nozzle!!
-mesh_max: 225, 244  #needs to be calibrated for your individual printer
-probe_count: 6,6 #this is the number of probing points on X then Y axis
-mesh_pps: 2,2
-fade_start: 1
-fade_end: 10
-fade_target: 0
-
 [screws_tilt_adjust]
-screw1: 26, 8
+screw1: 26, -2
 screw1_name: front left screw
-screw2: 26, 178
+screw2: 26, 165
 screw2_name: rear left screw
-screw3: 197, 178
+screw3: 197, 165
 screw3_name: rear right screw
-screw4: 197, 8
+screw4: 197, -2
 screw4_name: front right screw
 horizontal_move_z: 10.
 speed: 100.
 screw_thread: CW-M3
+
+################################################################################
+# Bed Heater Config
+################################################################################
+[heater_bed]
+heater_pin: gpio21
+sensor_type: EPCOS 100K B57560G104F
+sensor_pin: gpio26
+min_temp: 0
+max_temp: 130
 
 ################################################################################
 # CPU/MCU temps
@@ -177,6 +177,34 @@ sensor_type: temperature_mcu
 min_temp: 0
 max_temp: 100
 
+################################################################################
+# Fans
+################################################################################
+[fan]
+pin: gpio17
+
+[heater_fan hotend_fan]
+pin: gpio18
+heater: extruder
+heater_temp: 50.0
+
+[heater_fan controller_fan]
+pin: gpio20
+heater: heater_bed
+heater_temp: 40.0
+
+
+################################################################################
+# Neopixels
+################################################################################
+# [neopixel stealthburner]
+# pin: gpio24
+# chain_count: 4
+# color_order: GRB
+# initial_RED: 0.3
+# initial_GREEN: 0.3
+# initial_BLUE: 0.3
+
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
@@ -184,55 +212,55 @@ max_temp: 100
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 26.085
-#*# pid_ki = 1.225
-#*# pid_kd = 138.901
+#*# pid_kp = 28.632
+#*# pid_ki = 1.435
+#*# pid_kd = 142.805
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 67.630
-#*# pid_ki = 1.249
-#*# pid_kd = 915.540
+#*# pid_kp = 65.777
+#*# pid_ki = 1.169
+#*# pid_kd = 924.987
 #*#
 #*# [input_shaper]
-#*# shaper_type_x = 3hump_ei
-#*# shaper_freq_x = 83.8
-#*# shaper_type_y = ei
-#*# shaper_freq_y = 47.6
+#*# shaper_type_x = ei
+#*# shaper_freq_x = 58.0
+#*# shaper_type_y = 2hump_ei
+#*# shaper_freq_y = 58.0
 #*#
 #*# [probe]
-#*# z_offset = 7.470
+#*# z_offset = 7.400
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.040000, -0.025000, -0.007500
-#*# 	  -0.008750, 0.000000, 0.035000
-#*# 	  -0.021250, -0.028750, 0.015000
+#*# 	  0.003750, 0.006250, -0.001250
+#*# 	  -0.001250, 0.000000, 0.012500
+#*# 	  0.000000, 0.008750, 0.003750
 #*# x_count = 3
 #*# y_count = 3
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = lagrange
 #*# tension = 0.2
-#*# min_x = 92.99
-#*# max_x = 141.99
-#*# min_y = 77.15
-#*# max_y = 151.96
+#*# min_x = 119.24
+#*# max_x = 140.76
+#*# min_y = 118.98
+#*# max_y = 140.99
 #*#
 #*# [bed_mesh KAMP]
 #*# version = 1
 #*# points =
-#*# 	  -0.040000, -0.025000, -0.007500
-#*# 	  -0.008750, 0.000000, 0.035000
-#*# 	  -0.021250, -0.028750, 0.015000
+#*# 	-0.020000, -0.047500, -0.050000
+#*# 	0.013750, 0.000000, -0.026250
+#*# 	0.035000, 0.006250, -0.037500
 #*# x_count = 3
 #*# y_count = 3
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = lagrange
 #*# tension = 0.2
-#*# min_x = 92.99
-#*# max_x = 141.99
-#*# min_y = 77.15
-#*# max_y = 151.96
+#*# min_x = 84.25
+#*# max_x = 135.67
+#*# min_y = 102.75
+#*# max_y = 118.35
