--- a/config/KlackEnder.cfg
+++ b/config/KlackEnder.cfg
@@ -24,78 +24,63 @@
 
 ##[(7x7)-1] / 2 = 24
 ##[(5x5)-1] / 2 = 12
+
+#####################################################################
+# Probe Offsets:
+#####################################################################
+# x_offset: 5 # negative = left of the nozzle
+# y_offset: 41 # negative = in front of of the nozzle
+
 [bed_mesh]
 speed: 400
-horizontal_move_z: 2
-mesh_min: 8,30
-mesh_max: 223,201
+horizontal_move_z: 10
+mesh_min: 5,39
+mesh_max: 224,229
 probe_count: 5,5
 relative_reference_index: 12
 algorithm: bicubic
 fade_start: 1
 fade_end: 10
-#fade_target:
-#   The z position in which fade should converge. When this value is set
-#   to a non-zero value it must be within the range of z-values in the mesh.
-#   Users that wish to converge to the z homing position should set this to 0.
-#   Default is the average z value of the mesh.
 split_delta_z: 0.015
-#   The amount of Z difference (in mm) along a move that will
-#   trigger a split. Default is .025.
 move_check_distance: 3
-#   The distance (in mm) along a move to check for split_delta_z.
-#   This is also the minimum length that a move can be split. Default
-#   is 5.0.
-mesh_pps: 4,4
-#   A comma separated pair of integers (X,Y) defining the number of
-#   points per segment to interpolate in the mesh along each axis. A
-#   "segment" can be defined as the space between each probed
-#   point. The user may enter a single value which will be applied
-#   to both axes.  Default is 2,2.
-#bicubic_tension: .2
-#   When using the bicubic algorithm the tension parameter above
-#   may be applied to change the amount of slope interpolated.
-#   Larger numbers will increase the amount of slope, which
-#   results in more curvature in the mesh. Default is .2.
-
+mesh_pps: 2,2
 
 [homing_override]
 axes: z
 set_position_z:0 # Make printer think Z axis is at zero, so we can force a move upwards away from build plate
 gcode:
     G90
-    G1 Z10 F3000 ; move up to prevent accidentally scratching build plate    
+    G1 Z10 F1000 ; move up to prevent accidentally scratching build plate    
     G28.2 X
     G28.2 Y
     PROBE_OUT
-    G1 X117 Y117 F35000
+    G1 X117 Y117 F15000
     G28.2 Z
     PROBE_IN
-
 
 #####################################################################
 #	KlackEnder- Macros
 #####################################################################
-
 [gcode_macro PROBE_OUT]
 gcode:
     G90
-    G1 X245 F40000
+    G1 X245 F15000
     G4 P300
     G1 Z15
     G1 X0
+    G91
 
 [gcode_macro PROBE_IN]
 gcode:
     G90
     G1 Z20
-    G1 X245 F40000
-    G1 Y-8
-    G1 Z0
+    G1 X245 F15000
+    G1 Y0
+    G1 Z0 F2000
     G4 P300
-    G1 X220 F15000
-    G1 Z10
-    G1 X0
+    G1 X220 F5000
+    G1 Z10 F2000
+    G1 X0 F15000
 
 [gcode_macro AUTO_BED_MESH]
 gcode:
