--- a/config/KlipperScreen.conf
+++ b/config/KlipperScreen.conf
@@ -5,14 +5,30 @@ power_devices: Meross Plug
 titlebar_items: MCU, Pi
 camera_url: http://pi.local/webcam/?action=stream
 
-[preheat my_temp_setting]
+[preheat PLA]
 extruder: 200
 heater_bed: 60
 gcode: STATUS_HEATING
+
+[preheat PETG]
+extruder: 230
+heater_bed: 70
+gcode: STATUS_HEATING
+
+[preheat ABS]
+extruder: 250
+heater_bed: 100
+gcode: STATUS_HEATING
+
 #~# --- Do not edit below this line. This section is auto generated --- #~#
 #~#
 #~# [main]
 #~# theme = material-darker
 #~# font_size = small
 #~# use_dpms = False
+#~# print_sort_dir = date_asc
+#~# 
+#~# [graph Stealthbender]
+#~# temperature_sensor pico = False
+#~# temperature_sensor pi = False
 #~#
