--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -1,8 +1,10 @@
-######################################################################
-# Start Print and End Print
-######################################################################
+###############################
+## Start Print and End Print ##
+###############################
 # Replace the slicer's custom start and end g-code scripts with
-# START_PRINT and END_PRINT.
+# START_PRINT BED_TEMP=[bed_temperature_initial_layer] 
+# EXTRUDER_TEMP=[nozzle_temperature_initial_layer]
+# SET_PRINT_STATS_INFO TOTAL_LAYER=[total_layer_count]
 
 [gcode_macro START_PRINT]
 gcode:
@@ -14,8 +16,7 @@ gcode:
     G28
     STATUS_MESHING
     BED_MESH_CALIBRATE
-    # BED_MESH_PROFILE SAVE=KAMP
-    # BED_MESH_PROFILE LOAD=KAMP
+    # BED_MESH_PROFILE LOAD=default
     STATUS_HEATING
     M190 S{BED_TEMP}
     M109 S{EXTRUDER_TEMP}
@@ -35,30 +36,31 @@ gcode:
     PRESENT_BED
     M117
     UPDATE_DELAYED_GCODE ID=status_ready DURATION=30
+    M84
 
-################################################################################
-# HOME
-################################################################################
+##########
+## HOME ##
+##########
 [gcode_macro HOME]
 description: Home all axis
 gcode:
   G28
 
-################################################################################
-# Present Bed
-################################################################################
+#################
+## Present Bed ##
+#################
 [gcode_macro PRESENT_BED]
 gcode:
   G91
   G1 Z5 F3000
   G90
-  G1 X0 Y220 F3000
-  M84
+  G1 X50 Y150 F3000
+#   M84
 
-######################################################################
-# Filament Change
-######################################################################
-# M600: Filament Change. This macro will pause the printer, move the
+#####################
+## Filament Change ##
+#####################
+# M600: Filament Change. This macro will pause the printer, move the ##
 # tool to the change position, and retract the filament 50mm. Adjust
 # the retraction settings for your own extruder. After filament has
 # been changed, the print can be resumed from its previous position
@@ -81,33 +83,21 @@ gcode:
     RESTORE_GCODE_STATE NAME=M600_state
     STATUS_COMPLETE
 
-######################################################################
-# Input Shaper Calibration
-######################################################################
-# [gcode_macro SHAPER_CALIBRATE_X]
-# gcode:
-#     SHAPER_CALIBRATE AXIS=X
-
-# [gcode_macro SHAPER_CALIBRATE_Y]
-# gcode:
-#     SHAPER_CALIBRATE AXIS=Y
-
-######################################################################
-# Only Home if Needed
-######################################################################
+#########################
+## Only Home if Needed ##
+#########################
 [gcode_macro G28]
-# Only home if needed.
-rename_existing: G28.2
+rename_existing: G28.1
 gcode:
     {% if printer.toolhead.homed_axes != "xyz" %}
         STATUS_HOMING
-        G28.2
+        G28.1
         STATUS_READY
     {% endif %}
 
 [gcode_macro _CLIENT_VARIABLE]
 variable_use_custom_pos   : True ; use custom park coordinates for x,y [True/False]
-variable_custom_park_x    : 225.0   ; custom x position; value must be within your defined min and max of X
+variable_custom_park_x    : 0.0   ; custom x position; value must be within your defined min and max of X
 variable_custom_park_y    : 225.0   ; custom y position; value must be within your defined min and max of Y
 variable_custom_park_dz   : 2.0   ; custom dz value; the value in mm to lift the nozzle when move to park position
 variable_retract          : 1.0   ; the value to retract while PAUSE
