--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -9,6 +9,9 @@
 
 [exclude_object]
 
+[gcode_arcs]
+resolution: 0.1
+
 [virtual_sdcard]
 path: /home/pi/printer_data/gcodes
 on_error_gcode: CANCEL_PRINT
@@ -16,28 +19,74 @@ on_error_gcode: CANCEL_PRINT
 [idle_timeout]
 timeout: 18000
 
-################################################################################
-# Printer
-################################################################################
+#############
+## Display ##
+#############
+[display]
+lcd_type: sh1106
+i2c_mcu: host
+i2c_bus: i2c.1
+x_offset: 2
+
+[display_data _default_16x4 fan]
+position: 0, 10
+text: 
+    ~chamber~
+    { "%0.0f" % (printer['temperature_sensor chamber'].temperature,)  }
+    ~degrees~
+
+[display_glyph chamber]
+data:
+  ................
+  ..************..
+  ..*..........*..
+  ..*..........*..
+  ..*....**....*..
+  ..*************.
+  ..*....**....*..
+  ..*..........*..
+  ..*..........*..
+  ..*..........*..
+  ..*************.
+  ..*..........*..
+  ..*..........*..
+  .**************.
+  .**************.
+  ................
+
+
+#################
+## MCU Configs ##
+#################
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_rp2040_455035712895C148-if00
 restart_method: command
 
+[mcu host]
+serial: /tmp/klipper_host_mcu
+
+[mcu e3v3]
+serial: /dev/serial/by-id/usb-Klipper_stm32g0b1xx_4E00230002504B5735313920-if00
+restart_method: command
+
+####################
+## Printer Config ##
+####################
 [printer]
 kinematics: cartesian
 max_velocity: 500
-max_accel: 3700
+max_accel: 4800
 max_z_velocity: 150
-max_z_accel: 300
+max_z_accel: 100
 
-################################################################################
-# Stepper Configs
-################################################################################
+#####################
+## Stepper Configs ##
+#####################
 [stepper_x]
 step_pin: gpio11
 dir_pin: !gpio10
 enable_pin: !gpio12
-microsteps: 16
+microsteps: 64
 rotation_distance: 40
 endstop_pin: ^gpio4
 position_endstop: 0
@@ -45,44 +94,24 @@ position_max: 246
 homing_speed: 200
 second_homing_speed: 100
 
-[tmc2209 stepper_x]
-uart_pin: gpio9
-tx_pin: gpio8
-uart_address: 0
-run_current: 0.8
-hold_current: 0.6
-stealthchop_threshold: 999999
-# diag_pin: ^gpio4
-# driver_SGTHRS: 100
-
 [stepper_y]
-step_pin: gpio6
-dir_pin: !gpio5
-enable_pin: !gpio7
-microsteps: 16
+step_pin: e3v3:PB10
+dir_pin: !e3v3:PB2
+enable_pin: !e3v3:PB11
+microsteps: 64
 rotation_distance: 40
-endstop_pin: ^gpio3
+endstop_pin: ^e3v3:PC1
 position_endstop: 0
 position_max: 235
 position_min: -8
 homing_speed: 200
 second_homing_speed: 100
 
-[tmc2209 stepper_y]
-uart_pin: gpio9
-tx_pin: gpio8
-uart_address: 2
-run_current: 0.8
-hold_current: 0.6
-stealthchop_threshold: 999999
-diag_pin: ^gpio3
-driver_SGTHRS: 100
-
 [stepper_z]
 step_pin: gpio19
 dir_pin: gpio28
 enable_pin: !gpio2
-microsteps: 16
+microsteps: 64
 rotation_distance: 8
 endstop_pin: probe:z_virtual_endstop
 position_max: 250
@@ -90,27 +119,47 @@ position_min: -8
 homing_speed: 20
 second_homing_speed: 5
 
+
+[tmc2209 stepper_x]
+interpolate: False
+uart_pin: gpio9
+tx_pin: gpio8
+uart_address: 0
+run_current: 0.7
+interpolate: False
+stealthchop_threshold: 999999 # Forces Stealthchop
+
+[tmc2209 stepper_y]
+interpolate: False
+uart_pin: e3v3:PC11
+tx_pin: e3v3:PC10
+uart_address: 2
+run_current: 0.7
+interpolate: False
+stealthchop_threshold: 999999 # Forces Stealthchop
+
 [tmc2209 stepper_z]
 uart_pin: gpio9
+interpolate: False
 tx_pin: gpio8
 uart_address: 1
 run_current: 0.580
-hold_current: 0.500
-# stealthchop_threshold: 999999
+interpolate: False
+stealthchop_threshold: 0 # Disables Stealthchop
 
-################################################################################
-# Extruder Config
-################################################################################
+#####################
+## Extruder Config ##
+#####################
 [extruder]
 step_pin: gpio14
 dir_pin: !gpio13
 enable_pin: !gpio15
-microsteps: 16
-gear_ratio:50:10
-rotation_distance: 22.991
+microsteps: 64
+rotation_distance: 22.07136
+gear_ratio: 50:10
 nozzle_diameter: 0.4
 filament_diameter: 1.75
-pressure_advance = 0.04
+pressure_advance = 0.02
 heater_pin: gpio23
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: gpio27
@@ -124,62 +173,75 @@ max_extrude_only_distance: 100.0
 uart_pin: gpio9
 tx_pin: gpio8
 uart_address: 3
-run_current: 0.350
-hold_current: 0.200
-stealthchop_threshold: 999999
+run_current: 0.35
+interpolate: False
+stealthchop_threshold: 0 # Disables Stealthchop
 
-################################################################################
-# Probe
-################################################################################
+########################
+## Chamber Thermistor ##
+########################
+[temperature_sensor chamber]
+sensor_type: EPCOS 100K B57560G104F
+sensor_pin: e3v3:PA0
+
+###########
+## Probe ##
+###########
 [probe]
 pin: ^gpio25
-x_offset: 5 # negative = left of the nozzle
-y_offset: 41 # negative = in front of of the nozzle
-speed: 10.0
+x_offset: 5
+y_offset: 41
+speed: 7.0
 lift_speed: 30.0
 sample_retract_dist: 1
 samples: 2
 samples_tolerance_retries: 6
 
 [screws_tilt_adjust]
-screw1: 26, -2
-screw1_name: front left screw
-screw2: 26, 165
-screw2_name: rear left screw
-screw3: 197, 165
-screw3_name: rear right screw
-screw4: 197, -2
-screw4_name: front right screw
+screw1: 26, 165
+screw1_name: rear left screw
+screw2: 26, -2
+screw2_name: front left screw
+screw3: 197, -2
+screw3_name: front right screw
+screw4: 197, 165
+screw4_name: rear right screw
 horizontal_move_z: 10.
 speed: 100.
-screw_thread: CW-M3
+screw_thread: CW-M4
 
-################################################################################
-# Bed Heater Config
-################################################################################
+#######################
+## Bed Heater Config ##
+#######################
 [heater_bed]
-heater_pin: gpio21
+heater_pin: e3v3:PC9
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: gpio26
+sensor_pin: e3v3:PC4
 min_temp: 0
 max_temp: 130
 
-################################################################################
-# CPU/MCU temps
-################################################################################
+###################
+## CPU/MCU temps ##
+###################
 [temperature_sensor Pi]
 sensor_type: temperature_host
 min_temp: 10
 max_temp: 100
 
-[temperature_sensor MCU]
+[temperature_sensor Pico]
 sensor_type: temperature_mcu
 min_temp: 0
 max_temp: 100
 
-################################################################################
-# Fans
-################################################################################
+[temperature_sensor SKR Mini]
+sensor_type: temperature_mcu
+sensor_mcu: e3v3
+min_temp: 0
+max_temp: 100
+
+##########
+## Fans ##
+##########
 [fan]
 pin: gpio17
 
@@ -188,79 +250,65 @@ pin: gpio18
 heater: extruder
 heater_temp: 50.0
 
-[heater_fan controller_fan]
+[heater_fan pico_fan]
 pin: gpio20
 heater: heater_bed
 heater_temp: 40.0
 
+[heater_fan controller_fan]
+pin: e3v3:PB15
+heater: heater_bed
+heater_temp: 40.0
 
-################################################################################
-# Neopixels
-################################################################################
-# [neopixel stealthburner]
-# pin: gpio24
-# chain_count: 4
-# color_order: GRB
-# initial_RED: 0.3
-# initial_GREEN: 0.3
-# initial_BLUE: 0.3
+##########
+## LEDs ##
+##########
+[led frame_lights]
+white_pin: e3v3:PC8
+#cycle_time: 0.010
+#   The amount of time (in seconds) per PWM cycle. It is recommended
+#   this be 10 milliseconds or greater when using software based PWM.
+#   The default is 0.010 seconds.
+initial_WHITE: 1.0
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
-#*# [stepper_z]
-#*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 28.632
-#*# pid_ki = 1.435
-#*# pid_kd = 142.805
+#*# pid_kp = 28.936
+#*# pid_ki = 1.543
+#*# pid_kd = 135.637
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 65.777
-#*# pid_ki = 1.169
-#*# pid_kd = 924.987
+#*# pid_kp = 68.189
+#*# pid_ki = 1.500
+#*# pid_kd = 774.793
 #*#
 #*# [input_shaper]
 #*# shaper_type_x = ei
-#*# shaper_freq_x = 58.0
-#*# shaper_type_y = 2hump_ei
-#*# shaper_freq_y = 58.0
+#*# shaper_freq_x = 49.6
+#*# shaper_type_y = mzv
+#*# shaper_freq_y = 40.4
 #*#
 #*# [probe]
-#*# z_offset = 7.265
+#*# z_offset = 7.260
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.003750, 0.006250, -0.001250
-#*# 	  -0.001250, 0.000000, 0.012500
-#*# 	  0.000000, 0.008750, 0.003750
+#*# 	  0.017188, 0.074375, 0.082813
+#*# 	  0.018750, 0.068750, 0.101250
+#*# 	  0.000000, 0.034062, 0.067812
+#*# 	  -0.054063, 0.002812, 0.044687
 #*# x_count = 3
-#*# y_count = 3
+#*# y_count = 4
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = lagrange
 #*# tension = 0.2
-#*# min_x = 119.24
-#*# max_x = 140.76
-#*# min_y = 118.98
-#*# max_y = 140.99
-#*#
-#*# [bed_mesh KAMP]
-#*# version = 1
-#*# points =
-#*# 	-0.020000, -0.047500, -0.050000
-#*# 	0.013750, 0.000000, -0.026250
-#*# 	0.035000, 0.006250, -0.037500
-#*# x_count = 3
-#*# y_count = 3
-#*# mesh_x_pps = 2
-#*# mesh_y_pps = 2
-#*# algo = lagrange
-#*# tension = 0.2
-#*# min_x = 84.25
-#*# max_x = 135.67
-#*# min_y = 102.75
-#*# max_y = 118.35
+#*# min_x = 77.43
+#*# max_x = 142.55
+#*# min_y = 46.6
+#*# max_y = 173.38
